--- a/index.html
+++ b/index.html
@@ -3,25 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقعي التجريبي</title>
+    <title>موقعي للروايات</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
+            padding: 20px;
             background-color: #f7f7f7;
         }
         h1 {
+            text-align: center;
             color: #333;
         }
-        p {
-            color: #555;
+        .search-bar {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .search-bar input[type="text"] {
+            width: 50%;
+            padding: 10px;
+            font-size: 16px;
+        }
+        .book-list {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .book-item {
+            display: flex;
+            align-items: center;
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .book-item img {
+            width: 80px;
+            height: 120px;
+            object-fit: cover;
+            margin-right: 20px;
+        }
+        .book-item span {
             font-size: 18px;
+            color: #333;
         }
     </style>
 </head>
 <body>
-    <h1>مرحبًا بكم في موقعي!</h1>
-    <p>هنا ستبدأ رحلة قراءة ونشر الروايات تدريجيًا.</p>
+    <h1>مرحبًا بكم في موقعي للروايات</h1>
+
+    <div class="search-bar">
+        <input type="text" placeholder="ابحث عن رواية...">
+    </div>
+
+    <div class="book-list">
+        <div class="book-item">
+            <img src="images/book1.jpg" alt="رواية 1">
+            <span>رواية 1</span>
+        </div>
+        <div class="book-item">
+            <img src="images/book2.jpg" alt="رواية 2">
+            <span>رواية 2</span>
+        </div>
+        <div class="book-item">
+            <img src="images/book3.jpg" alt="رواية 3">
+            <span>رواية 3</span>
+        </div>
+    </div>
 </body>
 </html>
